[gd_scene load_steps=7 format=2]

[ext_resource path="res://Level/Terrain/Passable.shader" type="Shader" id=1]
[ext_resource path="res://Terrain/Terrain.gd" type="Script" id=2]
[ext_resource path="res://Terrain/arrow/arrow_straight.png" type="Texture" id=3]
[ext_resource path="res://Terrain/arrow/arrow_corner.png" type="Texture" id=4]
[ext_resource path="res://Terrain/arrow/arrow_top.png" type="Texture" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )

[node name="Terrain" type="Node2D"]
material = SubResource( 1 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -19.507
margin_top = -7.1868
margin_right = 20.493
margin_bottom = 6.8132
align = 1
valign = 1

[node name="Arrow" type="Sprite" parent="."]
visible = false
z_index = 1

[node name="ArrowStraight" type="Sprite" parent="."]
visible = false
z_index = 1
texture = ExtResource( 3 )

[node name="ArrowCorner" type="Sprite" parent="."]
visible = false
z_index = 1
texture = ExtResource( 4 )

[node name="ArrowTop" type="Sprite" parent="."]
visible = false
z_index = 1
texture = ExtResource( 5 )

[node name="Indication" type="ColorRect" parent="."]
visible = false
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 32, 32 )
color = Color( 0, 0.435294, 0.72549, 0.666667 )
